--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <button class="clear">Click here to clear the grid</button>
 </body>
 <script src="index.js"></script>
 </html>
